# onto-curator-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: index.html
notebooks/: 01_quickstart_demo.ipynb  curation_results.csv
onto_curator/: __init__.py  orchestrator.py  pipeline.py
onto_curator/agents/: __init__.py  conflict_resolver.py  entity_extractor.py  governance_gate.py  term_mapper.py
onto_curator/models/: __init__.py  schemas.py
onto_curator/tools/: __init__.py  bioportal.py  ols.py
tests/: test_entity_extractor.py  test_governance_gate.py
