[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onto-curator"
version = "0.1.0"
description = "Agentic AI for Autonomous Ontology Term Curation in Pharmaceutical R&D"
authors = [
  { name = "Ali Shahmohammadi", email = "ali.shahmohammadi@takeda.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ontology", "curation", "AI", "pharma", "LangGraph", "openai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "openai>=1.30.0",
  "langgraph>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-core>=0.2.0",
  "pydantic>=2.5.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4.0",
  "black>=24.0",
  "mypy>=1.10",
]
notebooks = [
  "jupyter>=1.0",
  "jupyterlab>=4.0",
  "ipykernel>=6.29",
  "ipywidgets>=8.0",
  "matplotlib>=3.9",
  "pandas>=2.2",
  "seaborn>=0.13",
]

[project.urls]
Homepage = "https://github.com/alishahmohammadi22/onto-curator-agent"
Issues = "https://github.com/alishahmohammadi22/onto-curator-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["onto_curator"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=onto_curator --cov-report=term-missing -v"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
